tests/extended/invalid/variables-init.cl
class Main {
  a : Int64 <- 2147483647;
  b : Int8 <- 90;

  main() : Object{{

  }};
};
